force-app/main/default/objects/Episode__c/Episode__c.object-meta.xml
<CustomObject>
    <label>Episode</label>
    <nameField>
        <label>Episode Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Episodes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>