force-app/main/default/objects/Episode__c/fields/Content__c.field-meta.xml
<CustomField>
    <fullName>Content__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Content</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Content__c.Content_type__c</field>
            <operation>equals</operation>
            <value>Serie</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Content__c</referenceTo>
    <relationshipLabel>Episodes</relationshipLabel>
    <relationshipName>Episodes</relationshipName>
    <type>Lookup</type>
</CustomField>