force-app/main/default/objects/Episode__c/fields/Episode_number__c.field-meta.xml
<CustomField>
    <fullName>Episode_number__c</fullName>
    <label>Episode number</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>