force-app/main/default/objects/Episode__c/fields/Synopsis__c.field-meta.xml
<CustomField>
    <fullName>Synopsis__c</fullName>
    <label>Synop</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>